# skillforge

./: .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md  main.py  pyproject.toml  skillforge.bundle
.claude/skills/skillforge-core/save-skill/: SKILL.md
.claude/skills/skillforge-core/search-docs/: SKILL.md
skillforge/: __init__.py  claude_runner.py  cli.py  config.py  corpus.py  discovery.py  exceptions.py  firecrawl_client.py  firecrawl_crawl.py  firecrawl_search.py  generate_skill.py  generator.py  sandbox_runner.py  shadow_validation.py  teacher.py  validation.py
